Fix spacing between list items in archive and tag pages

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -253,6 +253,10 @@ div.archive-item time {
   font: 0.85em Monaco, Monospace;
 }
 
+div.archive-item p {
+  margin-bottom: 0px;
+}
+
 mark {
   background-color: #c7edc0;
 }
